# bigshort

./: .env.example  .gitignore  CLAUDE.md  README.md  architect.md  je-suis-tm.md  prd.md  pyproject.toml  run.sh
research/: WRDS.md  hhm.md  je-suis-tm.md
src/bigshort/: __init__.py  __main__.py  config.py
src/bigshort/agents/: __init__.py  context.py  data_agent.py  execution_agent.py  feature_agent.py  human_gate.py  regime_agent.py  sentiment_agent.py  signal_agent.py  strategist.py
src/bigshort/core/: __init__.py  agent.py  bus.py  events.py  orchestrator.py  stores.py
src/bigshort/data/: base.py  fred.py  yfinance.py
src/bigshort/etl/: pipeline.py  sync.py
src/bigshort/features/: causality.py  correlation.py  heikin_ashi.py  kalman.py  macd.py  vix_calc.py
src/bigshort/reporting/: __init__.py  report.py
src/bigshort/sentiment/: __init__.py  features.py  news.py  reddit.py
src/bigshort/strategy/: __init__.py  execution.py  hmm.py  macd_backtest.py  report.py  rotation.py  straddle.py  voting.py
src/bigshort/utils/: cache.py
tests/: test_agents.py  test_bus.py  test_causality.py  test_events.py  test_execution.py  test_heikin_ashi.py  test_hmm.py  test_kalman.py  test_news.py  test_pipeline.py  test_reddit.py  test_report.py  test_rotation.py  test_sentiment_features.py  test_stores.py  test_straddle.py  test_vix_calc.py  test_voting.py  test_yfinance.py
