[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bigshort"
version = "0.1.0"
description = "Quantamental trading research platform"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
